Fied issues with axis and added more test cases

--- a/fpga/simpleFPGACopter/Makefile
+++ b/fpga/simpleFPGACopter/Makefile
@@ -26,12 +26,15 @@ toplevel: toplevel.v toplevelbus.v oneshot_wb.v pwmdecoder_wb.v led_wb.v tb_topl
 	vvp tb_toplevel
 
 tb_axis_spi: tb_axis_spi.v spi-slave/Verilog/source/SPI_Slave.v axis_spi.v
-	iverilog -g2012 -o tb_axis_spi tb_axis_spi.v spi-slave/Verilog/source/SPI_Slave.v axis_spi.v memory/Verilog/source/FIFO_N.v memory/Verilog/source/RAM_2Port.v
+	iverilog -g2012 -o tb_axis_spi tb_axis_spi.v spi-slave/Verilog/source/SPI_Slave.v axis_spi.v memory/Verilog/source/FIFO.v memory/Verilog/source/RAM_2Port.v
 	vvp tb_axis_spi
 
+tb_axiswishbone: tb_axiswishbone.v simplecounter_wb.v
+	iverilog -g2012 -o tb_axiswishbone tb_axiswishbone.v verilog-wishbone/rtl/axis_wb_master.v simplecounter_wb.v
+	vvp tb_axiswishbone
 
 clean:
-	rm -rf testbench.vcd testbench tb_toplevelbus tb_toplevelbus.vcd tb_axis_spi *.vcd
+	rm -rf testbench.vcd testbench tb_toplevelbus tb_toplevelbus.vcd tb_axis_spi *.vcd tb_axiswishbone
 		 
 		 
 		
