--- a/fpga/simpleFPGACopter/Makefile
+++ b/fpga/simpleFPGACopter/Makefile
@@ -30,11 +30,15 @@ tb_axis_spi: tb_axis_spi.v spi-slave/Verilog/source/SPI_Slave.v axis_spi.v
 	vvp tb_axis_spi
 
 tb_axiswishbone: tb_axiswishbone.v simplecounter_wb.v
-	iverilog -g2012 -o tb_axiswishbone tb_axiswishbone.v verilog-wishbone/rtl/axis_wb_master.v simplecounter_wb.v
+	iverilog -g2012 -o tb_axiswishbone tb_axiswishbone.v verilog-wishbone/rtl/axis_wb_master.v simplecounter_wb.v  memory/Verilog/source/FIFO.v memory/Verilog/source/RAM_2Port.v
 	vvp tb_axiswishbone
 
+tb_spiwishbone: tb_spiwishbone.v  spiwishbone.v
+	iverilog -g2012 -o tb_spiwishbone tb_spiwishbone.v spiwishbone.v verilog-wishbone/rtl/axis_wb_master.v spi-slave/Verilog/source/SPI_Slave.v memory/Verilog/source/FIFO.v memory/Verilog/source/RAM_2Port.v
+	vvp tb_spiwishbone
+
 clean:
-	rm -rf testbench.vcd testbench tb_toplevelbus tb_toplevelbus.vcd tb_axis_spi *.vcd tb_axiswishbone
+	rm -rf testbench.vcd testbench tb_toplevelbus tb_toplevelbus.vcd tb_axis_spi *.vcd tb_axiswishbone 
 		 
 		 
 		
