Updated Makefile for FIFIO_v.v

--- a/fpga/simpleFPGACopter/Makefile
+++ b/fpga/simpleFPGACopter/Makefile
@@ -34,7 +34,7 @@ tb_axiswishbone: tb_axiswishbone.v simplecounter_wb.v
 	vvp tb_axiswishbone
 
 tb_spiwishbone: tb_spiwishbone.v  spiwishbone.v
-	iverilog -g2012 -o tb_spiwishbone tb_spiwishbone.v spiwishbone.v verilog-wishbone/rtl/axis_wb_master.v spi-slave/Verilog/source/SPI_Slave.v memory/Verilog/source/FIFO.v memory/Verilog/source/RAM_2Port.v
+	iverilog -g2012 -o tb_spiwishbone tb_spiwishbone.v spiwishbone.v verilog-wishbone/rtl/axis_wb_master.v spi-slave/Verilog/source/SPI_Slave.v FIFO_v.v
 	vvp tb_spiwishbone
 
 clean:
