Added three port MUX for oneshot pwm and LED controller

--- a/fpga/simpleFPGACopter/Makefile
+++ b/fpga/simpleFPGACopter/Makefile
@@ -11,8 +11,14 @@ tb_pwmdecoder_wb: tb_pwmdecoder_wb.v   pwmdecoder_wb.v pwmdecoder.v
 	iverilog -g2012 -o tb_pwmdecoder_wb tb_pwmdecoder_wb.v pwmdecoder_wb.v pwmdecoder.v 
 	vvp tb_pwmdecoder_wb
 
+
+
+tb_mux_oneshotpwmled: tb_mux_oneshotpwmled.v  mux_oneshotpwmled.v threeport_mux.v
+	iverilog -g2012 -o tb_mux_oneshotpwmled tb_mux_oneshotpwmled.v mux_oneshotpwmled.v threeport_mux.v
+	vvp tb_mux_oneshotpwmled
+
 clean:
-	rm -rf  *.vcd  tb_spiwishbone tb_pwmdecoder_wb
+	rm -rf  *.vcd  tb_spiwishbone tb_pwmdecoder_wb tb_mux_oneshotpwmled
 		 
 		 
 		
